# svsm

./: Cargo.toml
configs/: migagent-target.json  migtd-target.json
kernel/src/cpu/idt/: svsm.rs
kernel/src/sev/: ghcb.rs
kernel/src/syscall/: class4.rs  mod.rs
syscall/src/: class4.rs  def.rs  lib.rs
user/migagent/: Cargo.toml  README.md  build.rs
user/migagent/src/: attestation.rs  main.rs  protocol.rs  state.rs  vmm_comm.rs
user/migtd/: Cargo.toml  README.md
user/migtd/src/: attestation.rs  main.rs  protocol.rs  state.rs
